<resources>
    <string name="app_name">What\'s Your Story</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Let\'s explore a world where every word holds magic, and every story is an adventure that thrills the soul. Here, you\'re not just a listener but also a history maker. Let\'s unfold new chapters in the world of stories, where every page is a stage for captivating tales.</string>
    <string name="title_boarding_page">Welcome to What\'s Your Story</string>
    <string name="title_signup_page">Let\'s complete your details below and start your adventure with us!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please log in to continue your adventure!</string>
    <string name="title_login_page">Continue Your Journey</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="password_invalid">Password must be at least 8 characters long, contain 1 uppercase letter, and 1 digit</string>
    <string name="email_invalid">Invalid email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description_hint">Write your story here</string>
    <string name="empty_image_warning">Please insert an image first</string>
    <string name="success_register_message">Registration successful! Start your adventure with us now!</string>
    <string name="success_register_title">Congratulations!</string>
    <string name="next">Next</string>
    <string name="try_again">Try Again</string>
    <string name="failed_register_title">Uh oh! Registration failed :(</string>
    <string name="name_required">Name cannot be empty!</string>
    <string name="failed_register_message">Something\'s not quite right. Let\'s try again! Make sure all information is correctly filled out to start your adventure with us! \n</string>
    <string name="title_login_success">Welcome back!</string>
    <string name="message_login_success">What are you waiting for? Log in now and start your adventure!</string>
    <string name="title_login_failed">Ouch! Looks like there was an error :(</string>
    <string name="message_login_failed">Please double check your login details. Don\'t worry, we\'re here to help you get into the next adventure! \n</string>
    <string name="failed_load_story">Failed to load story</string>
    <string name="failed_load_detail_story">Failed to load story details</string>
    <string name="detail_story_notfound">Story details not found</string>
    <string name="request_granted">Permission granted</string>
    <string name="request_denied">Permission denied</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="detail_photo">detail_photo</string>
    <string name="retry">Retry</string>
    <string name="include_location">Tambahkan Lokasi</string>
</resources>
